added bib entries for red giant radio emission

--- a/biblio.bib
+++ b/biblio.bib
@@ -110,6 +110,20 @@
 	Year = 1983,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1086/184154}}
 
+@ARTICLE{drake1986,
+   author = {{Drake}, S.~A. and {Linsky}, J.~L.},
+    title = "{Radio continuum emission from winds, chromospheres, and coronae of cool giants and supergiants}",
+  journal = {\aj},
+ keywords = {Chromosphere, Giant Stars, Radio Emission, Stellar Coronas, Stellar Winds, Supergiant Stars, Centimeter Waves, Continuous Spectra, Cool Stars, Hertzsprung-Russell Diagram, Iue, Radio Sources (Astronomy)},
+     year = 1986,
+    month = mar,
+   volume = 91,
+    pages = {602-620},
+      doi = {10.1086/114043},
+   adsurl = {http://adsabs.harvard.edu/abs/1986AJ.....91..602D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{reffert2015,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2015A%26A...574A.116R},
@@ -18454,3 +18468,170 @@ archivePrefix = "arXiv",
 	Title = {{On the Clustering of Nebulae}},
 	Volume = 50,
 	Year = 1938}
+
+@ARTICLE{Guedel2002ARAA,
+   author = {{G{\"u}del}, M.},
+    title = "{Stellar Radio Astronomy: Probing Stellar Atmospheres from Protostars to Giants}",
+  journal = {\araa},
+   eprint = {astro-ph/0206436},
+ keywords = {radio stars, coronae, stellar winds, high-energy particles, nonthermal radiation, magnetic fields},
+     year = 2002,
+   volume = 40,
+    pages = {217-261},
+      doi = {10.1146/annurev.astro.40.060401.093806},
+   adsurl = {http://adsabs.harvard.edu/abs/2002ARA%26A..40..217G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Lim1998,
+   author = {{Lim}, J. and {Carilli}, C.~L. and {White}, S.~M. and {Beasley}, A.~J. and 
+	{Marson}, R.~G.},
+    title = "{Large convection cells as the source of Betelgeuse's extended atmosphere}",
+  journal = {\nat},
+     year = 1998,
+    month = apr,
+   volume = 392,
+    pages = {575-577},
+      doi = {10.1038/33352},
+   adsurl = {http://adsabs.harvard.edu/abs/1998Natur.392..575L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Villadsen2014,
+  author={Jackie Villadsen and Gregg Hallinan and Stephen Bourke and Manuel Güdel and Michael Rupen},
+  title={First Detection of Thermal Radio Emission from Solar-type Stars with the Karl G. Jansky Very Large Array},
+  journal={The Astrophysical Journal},
+  volume={788},
+  number={2},
+  pages={112},
+  url={http://stacks.iop.org/0004-637X/788/i=2/a=112},
+  year={2014},
+  }
+  
+  @ARTICLE{Bastian1990,
+   author = {{Bastian}, T.~S.},
+    title = "{Radio emission from flare stars}",
+  journal = {\solphys},
+ keywords = {Flare Stars, Radio Bursts, Solar Neighborhood, Stellar Spectra, Astronomical Spectroscopy, Continuous Radiation, Dwarf Stars, Solar Radio Emission, Spectrum Analysis, Star Clusters},
+     year = 1990,
+    month = dec,
+   volume = 130,
+    pages = {265-294},
+      doi = {10.1007/BF00156794},
+   adsurl = {http://adsabs.harvard.edu/abs/1990SoPh..130..265B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bastian1998,
+   author = {{Bastian}, T.~S. and {Benz}, A.~O. and {Gary}, D.~E.},
+    title = "{Radio Emission from Solar Flares}",
+  journal = {\araa},
+     year = 1998,
+   volume = 36,
+    pages = {131-188},
+      doi = {10.1146/annurev.astro.36.1.131},
+   adsurl = {http://adsabs.harvard.edu/abs/1998ARA%26A..36..131B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{OGorman2013,
+   author = {{O'Gorman}, E. and {Harper}, G.~M. and {Brown}, A. and {Drake}, S. and 
+	{Richards}, A.~M.~S.},
+    title = "{Multi-wavelength Radio Continuum Emission Studies of Dust-free Red Giants}",
+  journal = {\aj},
+archivePrefix = "arXiv",
+   eprint = {1309.0860},
+ primaryClass = "astro-ph.SR",
+ keywords = {radio continuum: stars, stars: chromospheres, stars: individual: {$\alpha$} Boo {$\alpha$} Tau, stars: late-type, stars: winds, outflows},
+     year = 2013,
+    month = oct,
+   volume = 146,
+      eid = {98},
+    pages = {98},
+      doi = {10.1088/0004-6256/146/4/98},
+   adsurl = {http://adsabs.harvard.edu/abs/2013AJ....146...98O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fix1976,
+   author = {{Fix}, J.~D. and {Spangler}, S.~R.},
+    title = "{A search for variable 430 MHz continuum emission from red giant stars.}",
+  journal = {\apj},
+     year = 1976,
+    month = oct,
+   volume = 209,
+    pages = {503-504},
+      doi = {10.1086/154744},
+   adsurl = {http://adsabs.harvard.edu/abs/1976ApJ...209..503F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Beasley1992,
+   author = {{Beasley}, A.~J. and {Stewart}, R.~T. and {Carter}, B.~D.},
+    title = "{Non-thermal radio emission from post-main-sequence stars}",
+  journal = {\mnras},
+ keywords = {Main Sequence Stars, Nonthermal Radiation, Radio Emission, Radio Sources (Astronomy), Radio Spectra, Stellar Activity, Giant Stars, Stellar Magnetic Fields},
+     year = 1992,
+    month = jan,
+   volume = 254,
+    pages = {1-6},
+   adsurl = {http://adsabs.harvard.edu/abs/1992MNRAS.254....1B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{vandenOord1994,
+   author = {{van den Oord}, G.~H.~J. and {de Bruyn}, A.~G.},
+    title = "{Unusual flares at 360 and 609 MHz in the RS Canum Venaticorum-system II Pegasi observed with the WSRT: coherent emission from II Pegasi}",
+  journal = {\aap},
+ keywords = {STARS: MAGNETIC FIELDS, STARS: CLOSE BINARIES, STARS: CORONAE, STARS: FLARE, STARS: INDIVIDUAL: II PEG, RADIO CONTINUUM: STARS},
+     year = 1994,
+    month = jun,
+   volume = 286,
+    pages = {181-193},
+   adsurl = {http://adsabs.harvard.edu/abs/1994A%26A...286..181V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Skinner1997,
+   author = {{Skinner}, C.~J. and {Dougherty}, S.~M. and {Meixner}, M. and 
+	{Bode}, M.~F. and {Davis}, R.~J. and {Drake}, S.~A. and {Arens}, J.~F. and 
+	{Jernigan}, J.~G.},
+    title = "{Circumstellar environments - V. The asymmetric chromosphere and dust shell of alpha Orionis}",
+  journal = {\mnras},
+ keywords = {STARS: CHROMOSPHERES, CIRCUMSTELLAR MATTER, STARS: INDIVIDUAL: ALPHA ORI, SUPERGIANTS, INFRARED: STARS},
+     year = 1997,
+    month = jun,
+   volume = 288,
+    pages = {295-306},
+   adsurl = {http://adsabs.harvard.edu/abs/1997MNRAS.288..295S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Knapp1995,
+   author = {{Knapp}, G.~R. and {Bowers}, P.~F. and {Young}, K. and {Phillips}, T.~G.
+	},
+    title = "{Radio-Frequency Continuum Emission from Evolved Stars}",
+  journal = {\apj},
+ keywords = {RADIO CONTINUUM: STARS, ISM: PLANETARY NEBULAE: INDIVIDUAL ALPHANUMERIC: CRL 915, ISM: PLANETARY NEBULAE: INDIVIDUAL ALPHANUMERIC: IRAS 17423-1755, STARS: AGB AND POST-AGB, STARS: EVOLUTION, STARS: MASS LOSS},
+     year = 1995,
+    month = dec,
+   volume = 455,
+    pages = {293},
+      doi = {10.1086/176577},
+   adsurl = {http://adsabs.harvard.edu/abs/1995ApJ...455..293K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Newell1982,
+   author = {{Newell}, R.~T. and {Hjellming}, R.~M.},
+    title = "{Radio emission from the extended chromosphere of Alpha Orionis}",
+  journal = {\apjl},
+ keywords = {Chromosphere, Radio Emission, Red Giant Stars, Stellar Envelopes, Stellar Mass Ejection, Supergiant Stars, Late Stars, Orion Constellation, Radio Spectra, Spectrum Analysis, Stellar Radiation, Stellar Winds},
+     year = 1982,
+    month = dec,
+   volume = 263,
+    pages = {L85-L87},
+      doi = {10.1086/183929},
+   adsurl = {http://adsabs.harvard.edu/abs/1982ApJ...263L..85N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
