--- a/ms.tex
+++ b/ms.tex
@@ -739,13 +739,24 @@ Therefore, in the following, we ignore the radio emission from the red giant as 
 
 % Neil's addition
 
-Over the last four decades there have been numerous radio continuum observations of nearby red giants, many with the aim of understanding the extended atmospheres and mass-loss mechanisms of K- and M-type giants~\citep[e.g.,][]{Newell1982, Knapp1995, Skinner1997, Lim1998, OGorman2013}. Almost all observations have been carried out at wavelengths of 6 cm and below, probing thermal Bremsstrahlung emission from the large, partially ionized envelopes surrounding the giant stars~\citep{drake1986}. The spectral index of this emission is of order unity, with a range of reported values for various sources between 0.8 and 1.6~\citep{OGorman2013}.
+Over the last four decades there have been numerous radio continuum observations of nearby red giants, many with the aim of understanding the extended atmospheres and mass-loss mechanisms of K- and M-type giants~\citep[e.g.,][]{Newell1982, Knapp1995, Skinner1997, Lim1998, OGorman2013}.
+Almost all observations have been carried out at wavelengths of 6 cm and below, probing thermal Bremsstrahlung emission from the large, partially ionized envelopes surrounding the giant stars~\citep{drake1986}.
+The spectral index of this emission is of order unity, with a range of reported values for various sources between 0.8 and 1.6~\citep{OGorman2013}.
 
-Only two published studies describe attempts to detect continuum emission from single (non-binary) red giant stars at wavelengths above 20 cm ($L$ band); both yielded null results. First, a program that observed a sample of nine M-type giants at 430 MHz with the Arecibo Telescope failed to detect any of the sources down to flux density 10 mJy~\citep{Fix1976}. Later, with the Molonglo Observatory Synthesis Telescope (MOST), a sample of eight K- and M-type giants were observed at 843 MHz; the upper limits of their flux densities were placed at approximately 1 mJy~\citep{Beasley1992}. Current facilities could achieve far deeper sensitivity on similar targets. For example, as listed in Table~\ref{tab:sens}, at 235 MHz the GMRT reaches a sensitivity of under 0.2 mJy in under a half hour \memoNZ{is this projected or current performance of GMRT?}. However, any re-attempts to detect single red giants at wavelengths near 1 meter remain to be presented in the literature.
+Only two published studies describe attempts to detect continuum emission from single (non-binary) red giant stars at wavelengths above 20 cm ($L$ band); both yielded null results.
+First, a program that observed a sample of nine M-type giants at 430 MHz with the Arecibo Telescope failed to detect any of the sources down to flux density 10 mJy~\citep{Fix1976}.
+Later, with the Molonglo Observatory Synthesis Telescope (MOST), a sample of eight K- and M-type giants were observed at 843 MHz; the upper limits of their flux densities were placed at approximately 1 mJy~\citep{Beasley1992}.
+Current facilities could achieve far deeper sensitivity on similar targets.
+For example, as listed in Table~\ref{tab:sens}, at 235 MHz the GMRT reaches a sensitivity of under 0.2 mJy in under a half hour \memoNZ{is this projected or current performance of GMRT?}.
+However, any re-attempts to detect single red giants at wavelengths near 1 meter remain to be presented in the literature.
 
-The only red giants that have been detected at meter wavelengths are those in interacting binary systems like those of the RS CVn type. For example, van den Oord and de Bruyn detected plasma maser emission from II Pegasi at 360 MHz and 609 MHz with the WSRT~\citep{vandenOord1994}. Although single dwarf-type main sequence stars are also known to exhibit bright, coherent radio flares~\citep{Bastian1990}, no analog to this non-thermal emission process has been proposed to exist for evolved stars.
+The only red giants that have been detected at meter wavelengths are those in interacting binary systems like those of the RS CVn type.
+For example, van den Oord and de Bruyn detected plasma maser emission from II Pegasi at 360 MHz and 609 MHz with the WSRT~\citep{vandenOord1994}.
+Although single dwarf-type main sequence stars are also known to exhibit bright, coherent radio flares~\citep{Bastian1990}, no analog to this non-thermal emission process has been proposed to exist for evolved stars.
 
-Altogether, we lack firm observational constraints on the brightnesses of M giants near 1-m wavelengths. However, assuming thermal Bremsstrahlung emission continues to dominate in this wavelength regime, we can extrapolate down from the reported centimeter flux densities, using the specific spectral index when available. In this case, for example, extrapolating from the 0.4 mJy flux density of $\alpha$ Ori at 1.46 GHz, and using its spectral index 1.32~\citep{Newell1982}, we arrive at an estimated flux density of 0.04 mJy at 300 MHz.
+Altogether, we lack firm observational constraints on the brightnesses of M giants near 1-m wavelengths.
+However, assuming thermal Bremsstrahlung emission continues to dominate in this wavelength regime, we can extrapolate down from the reported centimeter flux densities, using the specific spectral index when available.
+In this case, for example, extrapolating from the 0.4 mJy flux density of $\alpha$ Ori at 1.46 GHz, and using its spectral index 1.32~\citep{Newell1982}, we arrive at an estimated flux density of 0.04 mJy at 300 MHz.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
