--- a/biblio.bib
+++ b/biblio.bib
@@ -14736,6 +14736,22 @@ archivePrefix = "arXiv",
 	Title = {{Tidal Decay and circularization of the orbits of Short-Period planets}},
 	Year = 2009}
 
+@ARTICLE{Rogers+Bowman2008,
+   author = {{Rogers}, A.~E.~E. and {Bowman}, J.~D.},
+    title = "{Spectral Index of the Diffuse Radio Background Measured from 100 to 200 MHz}",
+  journal = {\aj},
+archivePrefix = "arXiv",
+   eprint = {0806.2868},
+ keywords = {Galaxy: general, radio continuum: general, techniques: spectroscopic},
+     year = 2008,
+    month = aug,
+   volume = 136,
+    pages = {641-648},
+      doi = {10.1088/0004-6256/136/2/641},
+   adsurl = {http://adsabs.harvard.edu/abs/2008AJ....136..641R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{rogers+seager2010a,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...712..974R},
